--- a/ajax.html
+++ b/ajax.html
@@ -1,4 +1,10 @@
 <!DOCTYPE html>
+<!-- xls.js (C) 2013-present SheetJS http://sheetjs.com -->
+<!-- vim: set ts=2: -->
+<html>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<title>JS-XLS AJAX Live Demo</title>
 <style>
 #drop{
 	border:2px dashed #bbb;
@@ -13,17 +19,24 @@
 	width:100%;
 }
 </style>
-<b>JS-XLS AJAX Demo</b><br />
+</head>
+<body>
+<b>JS-XLS AJAX Live Demo</b><br />
+<a href="https://github.com/SheetJS/js-xls">Github Repo</a><br />
+<a href="https://github.com/SheetJS/js-xls/issues">Issues?  Something look weird?  Click here and report an issue</a><br />
+<br/><div id="fileurl"></div>
 <pre id="out"></pre>
 <br />
-<script src="xls.js"></script>
+<!-- uncomment the next line here for encoding support -->
+<!--<script src="dist/cpexcel.js"></script>-->
+<script src="iemagic.js"></script>
 <script src="shim.js"></script>
+<script src="xls.js"></script>
 <script>
 function to_csv(workbook) {
 	var result = [];
-	console.log(workbook);
 	workbook.SheetNames.forEach(function(sheetName) {
-		var csv = XLS.utils.make_csv(workbook.Sheets[sheetName]);
+		var csv = XLS.utils.sheet_to_csv(workbook.Sheets[sheetName]);
 		if(csv.length > 0){
 			result.push("SHEET: " + sheetName);
 			result.push("");
@@ -37,21 +50,41 @@ function process_wb(wb) {
 	var output = to_csv(wb);
 	if(out.innerText === undefined) out.textContent = output;
 	else out.innerText = output;
+	if(typeof console !== 'undefined') console.log("output", new Date());
 }
 
 var url = "test_files/formula_stress_test_ajax.xls";
 
-var oReq = new XMLHttpRequest();
+var oReq;
+if(window.XMLHttpRequest) oReq = new XMLHttpRequest();
+else if(window.ActiveXObject) oReq = new ActiveXObject('MSXML2.XMLHTTP.3.0');
+else throw "XHR unavailable for your browser";
+
+document.getElementById('fileurl').innerHTML = '<a href="' + url + '">Download file</a>';
+
 oReq.open("GET", url, true);
-oReq.responseType = "arraybuffer";
-oReq.onload = function(e) {
-	var arraybuffer = oReq.response;
-	var data = new Uint8Array(arraybuffer);
-	var arr = new Array();
-	for(var i = 0; i != data.length; ++i) arr[i] = data[i];
-	var wb = XLS.read(arr, {type:"array"});
-	process_wb(wb);
+
+if(typeof Uint8Array !== 'undefined') {
+	oReq.responseType = "arraybuffer";
+	oReq.onload = function(e) {
+		if(typeof console !== 'undefined') console.log("onload", new Date());
+		var arraybuffer = oReq.response;
+		var data = new Uint8Array(arraybuffer);
+		var arr = new Array();
+		for(var i = 0; i != data.length; ++i) arr[i] = data[i];
+		var wb = XLS.read(arr, {type:"array"});
+		process_wb(wb);
+	};
+} else {
+	oReq.setRequestHeader("Accept-Charset", "x-user-defined");
+	oReq.onreadystatechange = function() { if(oReq.readyState == 4 && oReq.status == 200) {
+		var ff = convertResponseBodyToText(oReq.responseBody);
+		if(typeof console !== 'undefined') console.log("onload", new Date());
+		var wb = XLS.read(ff, {type:"binary"});
+		process_wb(wb);
+	} };
 }
+
 oReq.send();
 
 </script>
@@ -66,3 +99,5 @@ oReq.send();
 		var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
 	})();
 </script>
+</body>
+</html>
