--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- xls.js (C) 2013-2015 SheetJS http://sheetjs.com -->
+<!-- xls.js (C) 2013-present  SheetJS http://sheetjs.com -->
 <!-- vim: set ts=2: -->
 <html>
 <head>
@@ -193,13 +193,13 @@ function process_wb(wb) {
 	var output = "";
 	switch(get_radio_value("format")) {
 		case "json":
-		output = JSON.stringify(to_json(wb), 2, 2);
+			output = JSON.stringify(to_json(wb), 2, 2);
 			break;
 		case "form":
 			output = to_formulae(wb);
-			break; 
+			break;
 		default:
-		output = to_csv(wb);
+			output = to_csv(wb);
 	}
 	if(out.innerText === undefined) out.textContent = output;
 	else out.innerText = output;
@@ -230,7 +230,7 @@ function handleDrop(e) {
 					var arr = fixdata(data);
 					wb = X.read(btoa(arr), {type: 'base64'});
 				}
-			process_wb(wb);
+				process_wb(wb);
 			}
 		};
 		if(rABS) reader.readAsBinaryString(f);
